# opensim-gui

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE.txt  NSIS.InstallOptions.ini.in  NSIS.template.in  README.md  WriteEnvStr.nsh  appveyor.yml
Gui/: CMakeLists.txt  change_license.py  find_files_with_no_license.py
Gui/Internal/: _openSimlab.osim
Gui/opensim/: CMakeLists.txt  asset-manifest.json  build.xml  build_id.properties.in  build_version.properties.in  index.html  sceneToTree.tsx  tug_of_war01.osim
Gui/opensim/K12/: build.xml  manifest.mf
Gui/opensim/K12/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Gui/opensim/K12Utils/: build.xml  manifest.mf
Gui/opensim/K12Utils/nbproject/: build-impl.xml  genfiles.properties  project.xml
Gui/opensim/SIMMSupport/: build.xml  manifest.mf
Gui/opensim/SIMMSupport/nbproject/: build-impl.xml  genfiles.properties  platform.properties  project.properties  project.xml
Gui/opensim/Scripts/: ModelBuilder.py  ModelBuildingFunctions.py  Readme.txt  addPrescribedMotion.py  alterTendonSlackLength.py  connectRodToGroundWithPinJoint.py  createControlsFromStorage.py  createDoublePendulum.py  createRodForPendulum.py  editProperties.py  makeUlnaHeavy.py  modelBuilder.py  modelBuildingFunctions.py  modelBuildingUtilities.py  plotMuscleFiberLengthAgainstFile.py  plotMuscleMomentArmAgainstMotion.py  runMultipleIKTrials.py  runMultipleIKTrialsPrompt.py  runScaling.py  runTutorialOne.py  runTutorialThree.py  runTutorialTwo.py  strengthenModel.py  test.py  testCreateAndLoadModel.py  testCreateLoadSimulateModel.py  testCreateModel.py  testCreateModelWithController.py  testPlot.py  testShowModelSummary.py  testVisuals.py
Gui/opensim/Scripts/Metabolics_example_scripts/: CMC_EvaluateResults.py  addAnkleSpring.py  addMetabolicProbes.py  addPathSpring.py  addPlotDeviceResults.py  computeMomentArm.py  metabolicsSlowTwitchRatios_Gait2392.txt  metabolicsSlowTwitchRatios_gait10dof18musc.txt  plotBaselineResults.py
Gui/opensim/Scripts/testData/: BothLegs.osim  FiberLengthStd.sto  SinglePin_states_degrees.mot  Subject01_FiberLengths.sto  cvs1.sto  leg39.osim  leg39_Setup_InverseKinematics.xml  tug_of_war_muscles_controller_stronger.osim
Gui/opensim/annotationTool/: build.xml  manifest.mf
Gui/opensim/annotationTool/nbproject/: build-impl.xml  genfiles.properties  project.xml
Gui/opensim/coordinateViewer/: build.xml  manifest.mf
Gui/opensim/coordinateViewer/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Gui/opensim/helpUtils/: build.xml  manifest.mf
Gui/opensim/helpUtils/nbproject/: build-impl.xml  genfiles.properties  platform.properties  project.properties  project.xml
Gui/opensim/installer_files/: license_for_binary_distribution.txt  notice_for_binary_distribution.txt
Gui/opensim/installer_files/Linux/: INSTALL  opensim.conf  opensim.desktop
Gui/opensim/installer_files/OSX/: Info.plist  OpenSimDocument.icns  README.txt  opensim.conf  opensim.icns
Gui/opensim/installer_files/Windows/: installer24.nsi  make_installer.nsi  opensim.conf
Gui/opensim/jcommon/: manifest.mf
Gui/opensim/jcommon/nbproject/: genfiles.properties  platform.properties  project.xml
Gui/opensim/jetty-all-9.3.0.M/: build.xml  manifest.mf
Gui/opensim/jetty-all-9.3.0.M/nbproject/: genfiles.properties  project.properties  project.xml
Gui/opensim/jfreechart/: build.xml  manifest.mf
Gui/opensim/jfreechart/nbproject/: build-impl.xml  genfiles.properties  platform.properties  project.xml
Gui/opensim/jxbrowser/: build.xml  manifest.mf
Gui/opensim/jxbrowser/nbproject/: build-impl.xml  project.xml
Gui/opensim/jxbrowser_libs/: build.xml  manifest.mf
Gui/opensim/jxbrowser_libs/nbproject/: build-impl.xml  project.properties  project.xml
Gui/opensim/labs/: Curling_InverseDynamics.oscript  Curling_StaticOptimization.oscript  Soccer.oscript  SoccerKickingModel.osim  controls_kick.xml  lab_IK.oscript  lab_IK_full.oscript  leg69_Setup_FWD_kick.xml  soccerkickmodel.html  testIVD.oscript  testIVD2.oscript
Gui/opensim/labs/Curling/: ArmCurlingFullBody.osim  ArmCurlingFullBody_BicepsOnly.osim  ArmCurlingFullBody_BrachialisOnly.osim  ArmCurlingFullBody_StatOpt.osim  ArmCurlingStaticElbow90.mot  ArmCurling_ElbowFlex90_InvDyn.xml  ArmCurling_ElbowFlex90_StatOpt.xml
Gui/opensim/labs/Geometry/: Grass.vtp  Soccer_frame.STL  Soccer_net.STL
Gui/opensim/labs/lab_IK/: arm26.osim  arm26_InverseKinematics.mot  arm26_InverseKinematics_Tasks.xml  arm26_Setup_InverseKinematics.xml  arm26_elbow_flex.trc  arm26_with_bucket.osim  instructions.html
Gui/opensim/logger/: build.xml  manifest.mf
Gui/opensim/logger/nbproject/: build-impl.xml  project.properties  project.xml
Gui/opensim/mockup/: build.xml  manifest.mf
Gui/opensim/mockup/nbproject/: build-impl.xml  genfiles.properties  project.xml
Gui/opensim/modeling/: build.xml  manifest.mf
Gui/opensim/modeling/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Gui/opensim/nbproject/: build-impl.xml  platform.properties  project.properties  project.properties.in  project.xml
Gui/opensim/nbproject/private/: platform-private.properties  private.properties
Gui/opensim/plotter/: build.xml  manifest.mf
Gui/opensim/plotter/javahelp/: Plotter.hs  Plotter.jhm  Plotter_Index.xml  Plotter_TOC.xml
Gui/opensim/plotter/nbproject/: build-impl.xml  genfiles.properties  project.properties  (+1 more)
Gui/opensim/rice_cnl/: build.xml  manifest.mf
Gui/opensim/scriptingShell/: build.xml  manifest.mf
Gui/opensim/tracking/: build.xml  manifest.mf
Gui/opensim/updater/: build.xml  manifest.mf
Gui/opensim/utils/: build.xml  manifest.mf
Gui/opensim/view/: AppState.xml  PlotterTool.xml  build.xml  manifest.mf
Gui/opensim/visResources/: templateScene.json
Gui/opensim/visualViewer/: build.xml  manifest.mf
Gui/opensim/visualizationServer/: manifest.mf
Gui/opensim/vtk50/: build.xml  manifest.mf
Gui/opensim/xmlgraphics-commons-1.2svn/: build.xml  manifest.mf
Gui/plugins/: readme.txt
(+3008 files in other folders)
